assets/index_stylesheet.css
/* colors */
	:root {
		--white:#eeeeee;
		--black:#333333;
		--blue:#0099ff;
		--red:#ff5050;
		--dark-blue:#004d80;
		--dark-red:#660000;
	}

/* page */
	body {
		background-color: #222222;
		font-size: 4vh;
		font-family: arial, sans-serif;
		font-weight: bold;
		color: var(--white);
		width: 100vw;
		height: 100vh;
		overflow: hidden;
	}

	#message {
		position: absolute;
		top: 0px;
		left: 0px;
		margin: 10px;
		font-size: 4vh;
		font-family: arial, sans-serif;
		font-weight: bold;
		color: var(--white);
	}

/* form */
	#game_form {
		position: absolute;
		top: 50%;
		left: 50%;
		height: 65vw;
		width: 65vw;
		max-height: 65vh;
		max-width: 65vh;
		border: 10px solid var(--black);
		transform: translateX(-50%) translateY(-50%) rotate(45deg);
		border-radius: 10px;
		background-color: var(--black);
		box-shadow: 0px 0px 30px var(--white);
	}

	#game_form_inner {
		position: relative;
		top: 50%;
		left: 50%;
		width: 100%;
		height: 100%;
		transform: translateX(-50%) translateY(-50%) rotate(-45deg);
		text-align: center;
	}

	#title {
		position: absolute;
		top: 50%;
		left: 50%;
		width: 150%;
		transform: translateX(-50%) translateY(-50%);
		font-size: 7vh;
	}

	#title_spacer {
		display: inline-block;
		height: 0%;
		width: 5vw;
		background-color: black;
	}

/* buttons */
	#join {
		position: absolute;
		top: 80%;
		left: 50%;
		cursor: pointer;
		height: 40%;
		width: 40%;
		background-color: var(--red);
		color: var(--dark-red);
		border-radius: 10px;
		border: 0px;
		padding: 0px;
		transform: translateX(-50%) translateY(-50%) rotate(45deg);
		box-shadow: 0px 0px 20px var(--red);
		outline:none;
	}

	#join:hover {
		color: var(--red);
		background-color: var(--dark-red);
	}

	#join_inner {
		position: relative;
		top: 50%;
		left: 50%;
		transform: translateX(-50%) translateY(-50%) rotate(-45deg);
		font-size: 7vh;
		font-family: arial, sans-serif;
		font-weight: bold;
	}

	#start {
		position: absolute;
		top: 20%;
		left: 50%;
		cursor: pointer;
		height: 40%;
		width: 40%;
		background-color: var(--blue);
		color: var(--dark-blue);
		border-radius: 10px;
		border: 0px;
		padding: 0px;
		transform: translateX(-50%) translateY(-50%) rotate(45deg);
		box-shadow: 0px 0px 20px var(--blue);
		outline:none;
	}

	#start:hover {
		color: var(--blue);
		background-color: var(--dark-blue);
	}

	#start_inner {
		position: relative;
		margin-top: 8vh;
		left: 50%;
		transform: translateX(-50%) translateY(-50%) rotate(-45deg);
		font-size: 7vh;
		font-family: arial, sans-serif;
		font-weight: bold;
	}

/* inputs */
	#join_2 {
		display: none;
		position: absolute;
		top: 80%;
		left: 50%;
		height: 40%;
		width: 40%;
		background-color: var(--red);
		color: var(--dark-red);
		border-radius: 10px;
		border: 0px;
		padding: 0px;
		transform: translateX(-50%) translateY(-50%) rotate(45deg);
		box-shadow: 0px 0px 20px var(--red);
		outline: none;
		cursor: pointer;
	}

	#join_2:hover {
		background-color: var(--dark-red);
	}

	#game_id {
		position: relative;
		top: 50%;
		left: 50%;
		transform: translateX(-50%) translateY(-50%) rotate(-45deg);
		font-size: 5vh;
		font-family: arial, sans-serif;
		font-weight: bold;
		height: 25%;
		width: 100%;
		border: 0;
		border-radius: 10px;
		outline: none;
		text-align: center;
		color: var(--dark-red);
		outline:none;
	}

